# wordle

./: .pre-commit-config.yaml  README.md  foo.txt  pyproject.toml  scratch.py
src/wordle/: cli.py  dictionary.py  game.py  nerdle_equations.py  wordle_words.py
tests/: test_wordle.py
