[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["Eric L Frederich <eric.frederich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
wordle = 'wordle.cli:cli_main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
